# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.422 2005/12/02 21:59:46 wolf31o2 Exp $

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec:
  Added chost/cflags/cxxflags/ldflags to example spec template.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  OK, just kidding on that last commit. We were already doing rc-update add
  xdm default in livecdfs-update.sh and since it is a livecd-only function,
  there's no point in having it in rc-update.sh

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Have rc-update add xdm if livecd/xdm is set.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage1_target.py, modules/stage4_target.py,
  modules/tinderbox_target.py:
  So I was just kidding on that last commit.  This one is 2.0_rc4.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage1_target.py, modules/stage2_target.py,
  modules/stage4_target.py, modules/tinderbox_target.py:
  Reverting my nasty spaces->tabs mess-up and pushing out 2.0_rc4 quickly.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf, modules/catalyst_lock.py,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,