@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.422 2005/12/02 21:59:46 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.423 2005/12/04 17:09:57 rocket Exp $
+
+  04 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py:
+  Fix stage1 to NOT contain the code from stage2;continued cleanup from the
+  space fix issue
 
   02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   examples/generic_stage_template.spec:
